--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         </div>
         <div class="hours">
           <div class="box" >
-            XX
+           <h3>XX</h3>
           </div>
           <p>Hours</p>
         </div>
         <div class="minutes">
           <div class="box" >
-            XX
+            <h3>XX</h3>
           </div>
           <p>Minutes</p>
         </div>
         <div class="seconds">
           <div class="seconds box" >
-            XX
+            <h3>XX</h3>
           </div>
           <p>Seconds</p>
         </div>
@@ -55,5 +55,6 @@
       <a href=""><img src="./img/github.svg" alt="Github"> </a>
     </div>
   </footer>
+  <script src="./js/app.js"></script>
 </body>
 </html>
