Making this shit responsive

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&family=Raleway:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&family=Raleway:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" media="(max-width: 800px)" href="./css/tablet.css" />
   <title>2021</title>
 </head>
 <body>
@@ -20,25 +21,25 @@
       <div class="container__box">
         <div class="days">
           <div class="box" >
-            <h3>XX</h3>
+            <h3></h3>
           </div>
           <p>Days</p>
         </div>
         <div class="hours">
           <div class="box" >
-           <h3>XX</h3>
+           <h3></h3>
           </div>
           <p>Hours</p>
         </div>
         <div class="minutes">
           <div class="box" >
-            <h3>XX</h3>
+            <h3></h3>
           </div>
           <p>Minutes</p>
         </div>
         <div class="seconds">
           <div class="seconds box" >
-            <h3>XX</h3>
+            <h3></h3>
           </div>
           <p>Seconds</p>
         </div>
@@ -52,7 +53,7 @@
       <a href="mailto:stelin.contacto@gmail.com">Made with ❤ by StelinUwU</a> 
     </div>
     <div class="side">
-      <a href=""><img src="./img/github.svg" alt="Github"> </a>
+      <a  href="https://github.com/StelinUwU/CountDownNewYear" target="_blank"><img src="./img/github.svg" alt="Github"> </a>
     </div>
   </footer>
   <script src="./js/app.js"></script>
